--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,11 +2,11 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layout_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context=".SearchActivity">
 
     <!-- Main Content -->
     <LinearLayout
@@ -74,64 +74,52 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- Include headline_banner -->
-                <include layout="@layout/headline_banner" />
-
-                <!-- UPCOMING FIGHT -->
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:layout_marginTop="5dp"
-                    android:text="UPCOMING FIGHT"
-                    android:textSize="18dp"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-                <!-- RecyclerView for upcoming fights -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/fight_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"
-                    android:orientation="horizontal" />
+                    android:text="Find Anything about UFC!"
+                    android:textStyle="bold"
+                    android:gravity="center_horizontal"
+                    android:textSize="50dp"
+                    android:textColor="@color/white"/>
 
-                <!-- SEE WHAT'S HOT -->
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/see"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:text="SEE WHAT'S HOT"
+                    android:text="You want to know the latest rumor fight? Or you want some entertainment? Or you even want to learn how to fight? Search and find something only on UFC HOUSES!"
                     android:textSize="18dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="20dp"
                     android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:justificationMode="inter_word"
+                    android:gravity="center_horizontal"/>
+
+                <EditText
+                    android:id="@+id/searchEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:hint="Search..."
+                    android:paddingLeft="10dp"
+                    android:textColorHint="@color/black"
+                    android:background="@color/white"/>
 
                 <!-- RecyclerView for articles -->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/article_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="2595dp"
-                    android:nestedScrollingEnabled="false" />
-
-                <!-- SEE ALL -->
-                <TextView
-                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/seeAll"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:text="SEE ALL"
-                    android:textSize="18dp"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:nestedScrollingEnabled="true" />
 
             </LinearLayout>
 
+
         </ScrollView>
+
     </LinearLayout>
 
     <!-- Right Navigation Drawer -->
