--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,6 +142,6 @@
         android:layout_gravity="end"
         app:menu="@menu/navigation_menu"
         app:itemTextColor="@color/white"
-        android:background="@color/black"/>
+        android:background="@drawable/nav_view_background"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
