--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -65,7 +65,7 @@
         <!-- Wrap the content from this point in a ScrollView -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fillViewport="true">
 
@@ -100,13 +100,80 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:hint="Search..."
                     android:paddingLeft="10dp"
                     android:textColorHint="@color/black"
                     android:background="@color/white"/>
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginBottom="10dp"
+                    android:scrollbars="none"
+                    android:id="@+id/horizontal_buttons">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"
+                            android:id="@+id/btn_1"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="All"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"                            android:layout_marginLeft="6dp"
+                            android:id="@+id/btn_2"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="Light-Heavyweight"/>
+
+                        <Button
+                            android:id="@+id/btn_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"                            android:layout_marginLeft="6dp"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="Lightweight" />
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"                            android:layout_marginLeft="6dp"
+                            android:id="@+id/btn_4"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="Middleweight"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"                            android:layout_marginLeft="6dp"
+                            android:id="@+id/btn_5"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="Heavyweight"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="43dp"                            android:layout_marginLeft="6dp"
+                            android:id="@+id/btn_6"
+                            android:textColor="@color/black"
+                            android:backgroundTint="@color/white"
+                            android:text="Other"/>
+
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
 
                 <!-- RecyclerView for articles -->
                 <androidx.recyclerview.widget.RecyclerView
@@ -116,7 +183,6 @@
                     android:nestedScrollingEnabled="true" />
 
             </LinearLayout>
-
 
         </ScrollView>
 
@@ -129,7 +195,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         app:menu="@menu/navigation_menu"
-        app:itemTextColor="@color/white"
-        android:background="@color/black"/>
+        android:background="@drawable/nav_view_background"
+        app:itemTextColor="@color/white" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
