--- a/app/src/main/res/layout/headline_article.xml
+++ b/app/src/main/res/layout/headline_article.xml
@@ -21,30 +21,36 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/no_image"
             android:id="@+id/article_image_view"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginEnd="5dp"
+                android:textColor="@color/white"
+                android:text="00/00/00"
+                android:layout_marginBottom="5dp"
+                android:id="@+id/article_date"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:maxLines="3"
-                android:text="This is the title"
-                android:layout_marginBottom="5dp"
-                android:id="@+id/article_title"/>
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
@@ -59,36 +65,6 @@
                     android:id="@+id/article_category"/>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:layout_marginEnd="5dp"
-                    android:textColor="@color/white"
-                    android:text="00/00/00"
-                    android:layout_marginBottom="5dp"
-                    android:id="@+id/article_date"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="@color/white"
-                android:text="Read More..."
-                android:layout_marginBottom="5dp"
-                android:id="@+id/article_readmore"/>
-
-
-
-
 
         </LinearLayout>
 
